[project]
name = "utility-billing"
version = "0.1.0"
description = "Notebooks and code for the Utility Billing project"
readme = "README.md"
requires-python = ">=3.13"

# Core runtime deps (keep this lean for production use)
dependencies = [
  "pandas>=2.3.2",
  "numpy>=2.2.6",
  "openpyxl>=3.1.5",
  "python-dateutil>=2.9.0.post0",
  "reportlab>=4.4.3",
  "PyPDF2>=3.0.1",
]

# Optional but common data stack (uncomment as needed)
# "pyarrow",
# "polars",
# "matplotlib",
# "scikit-learn",

[tool.uv]

[tool.black]
line-length = 100
target-version = ["py311","py312","py313"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","FASTAPI","PANDAS"]
ignore = ["E203"]  # Black-compatible slicing

[dependency-groups]
# Dev-only tools (install with: `uv sync --group dev`)
dev = [
  "jupyterlab",
  "ipykernel",
  "black>=25.1.0",
  "pre-commit>=4.3.0",
  "ruff>=0.13.0",
]